force-app/main/default/objects/County_Distributor__c/County_Distributor__c.object-meta.xml
<CustomObject>
    <description>Integration</description>
    <label>Territory County</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>County  Distributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>