force-app/main/default/objects/County_Distributor__c/fields/County_Distributor_External_Id__c.field-meta.xml
<CustomField>
    <fullName>County_Distributor_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>County Distributor External Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>