force-app/main/default/objects/County_Distributor__c/fields/FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>FIPS_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FIPS Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>